tests/pass/operator/divide.us
fn main() {
    print(8 / 2); // expect: 4
    print(12 / 12 ); // expect: 1
}